tests/03-typecheck/04-data-constructor-redefined.ref
tests/03-typecheck/04-data-constructor-redefined.sl:3:6, Semantic error: func ivec2 is redefined
