tests/03-typecheck/04-data-constructor-redefined.sl
data ivec2 (int x, int y)

func ivec2 (int, int) (ivec2) in
    ivec2
end
